// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Loading props checkGrammar 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkGrammar 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkGrammar 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkGrammar 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkHighlight 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkHighlight 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkHighlight 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkHighlight 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkSpaces 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkSpaces 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkSpaces 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props checkSpaces 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props className 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs my-classname uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 1`] = `
<Div
  className="color-schema-default uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 2`] = `
<Div
  className="color-schema-red uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 3`] = `
<Div
  className="color-schema-red uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 4`] = `
<Div
  className="color-schema-red-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 5`] = `
<Div
  className="color-schema-red-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 6`] = `
<Div
  className="color-schema-green uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 7`] = `
<Div
  className="color-schema-green uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 8`] = `
<Div
  className="color-schema-green-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 9`] = `
<Div
  className="color-schema-green-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 10`] = `
<Div
  className="color-schema-yellow uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 11`] = `
<Div
  className="color-schema-yellow uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 12`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 13`] = `
<Div
  className="color-schema-yellow-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 14`] = `
<Div
  className="color-schema-purple uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 15`] = `
<Div
  className="color-schema-purple uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 16`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 17`] = `
<Div
  className="color-schema-purple-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 18`] = `
<Div
  className="color-schema-brown uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 19`] = `
<Div
  className="color-schema-brown uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 20`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 21`] = `
<Div
  className="color-schema-brown-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 22`] = `
<Div
  className="color-schema-orange uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 23`] = `
<Div
  className="color-schema-orange uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 24`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 25`] = `
<Div
  className="color-schema-orange-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 26`] = `
<Div
  className="color-schema-cyan uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 27`] = `
<Div
  className="color-schema-cyan uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 28`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 29`] = `
<Div
  className="color-schema-cyan-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 30`] = `
<Div
  className="color-schema-grey uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 31`] = `
<Div
  className="color-schema-grey uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 32`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 33`] = `
<Div
  className="color-schema-grey-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 34`] = `
<Div
  className="color-schema-pink uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 35`] = `
<Div
  className="color-schema-pink uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 36`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 37`] = `
<Div
  className="color-schema-pink-rich uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props colorSchema 38`] = `
<Div
  className="color-schema-pink uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props content 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  12345
</Div>
`;

exports[`UU5.Bricks.Loading props content 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props content 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props content 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  12345
</Div>
`;

exports[`UU5.Bricks.Loading props controlled 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props controlled 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props controlled 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props controlled 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props default props 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props disabled 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-disabled uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props disabled 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props disabled 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props disabled 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-disabled uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={true}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props dynamic 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props dynamic 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props dynamic 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props dynamic 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props hidden 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-hidden uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props hidden 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props hidden 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props hidden 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-hidden uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props id 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="myId"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props ignoreHTML 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props ignoreHTML 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props ignoreHTML 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props ignoreHTML 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props mainAttrs 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props name 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name="myName"
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 5`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 6`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 7`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 8`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 9`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 10`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 11`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 12`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="boxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 13`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 14`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="box"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 15`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 16`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="smallBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 17`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 18`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="smallBox"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props nestingLevel 19`] = `
<Span
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated uu5-common-inline"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  >
    .
  </span>
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  >
    .
  </span>
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  >
    .
  </span>
</Span>
`;

exports[`UU5.Bricks.Loading props nestingLevel 20`] = `
<Span
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated uu5-common-inline"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="inline"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  >
    .
  </span>
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  >
    .
  </span>
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  >
    .
  </span>
</Span>
`;

exports[`UU5.Bricks.Loading props noIndex 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-noindex uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props noIndex 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props noIndex 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props noIndex 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-noindex uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props pureRender 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props pureRender 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props pureRender 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props pureRender 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props selected 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-selected uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props selected 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props selected 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props selected 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-common-selected uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props style 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props style 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props style 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props style 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props textCorrector 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props textCorrector 2`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props textCorrector 3`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props textCorrector 4`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title={null}
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;

exports[`UU5.Bricks.Loading props tooltip 1`] = `
<Div
  className="uu5-bricks-loading uu5-common-padding-xs uu5-bricks-loading-animated"
  content={null}
  controlled={true}
  disabled={false}
  dynamic={false}
  hidden={false}
  id="uuID"
  ignoreInnerHTML={false}
  mainAttrs={null}
  name={null}
  nestingLevel="bigBoxCollection"
  noIndex={false}
  pureRender={false}
  ref_={null}
  selected={false}
  style={Object {}}
  title="My Tooltip"
  tooltip={null}
>
  <span
    className="uu5-bricks-loading-dot"
    key=".0"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".1"
  />
  <span
    className="uu5-bricks-loading-dot"
    key=".2"
  />
</Div>
`;
